--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,11 @@ p {
 
 h1 {
   font-size: 72px;
-  text-align:center;
+  margin-block-start: 0.08em;
+  margin-block-end: 0.08em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold
 }
 
 h2 {
