--- a/styles/HomeHeader.module.css
+++ b/styles/HomeHeader.module.css
@@ -3,6 +3,8 @@
   height: 30vw;
   display: flex;
   flex-direction: row;
+
+  box-shadow: 0px 5px 10px #DDD;
 }
 
 .greyGradientText {
@@ -23,17 +25,22 @@
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent; 
   -moz-text-fill-color: transparent;
+  filter: drop-shadow(1px 1px 5px #DDD);
 }
 
 .headerFirstLineText {
   margin-left: 5vw;
-  font-size: 5vw;
-  font-weight: bold;
+  font-size: 4.5vw;
+  font-weight: 300;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  letter-spacing: -0.02em;
   margin-block-end: 0.0em;
 }
 
 .headerSecondLineText {
   margin-left: 5vw;
-  font-weight: bold;
+  font-weight: 900;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  letter-spacing: -0.02em;
   font-size: 8vw;
 }
