--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,7 +62,12 @@ h1 {
 }
 
 h2 {
-  text-align:center;
+  font-size: 40px;
+  font-weight: 800;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .animated-1 {
