--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,7 +57,7 @@
   letter-spacing: -0.04em;
   margin-block-end: 0.0em;
   margin: 15px 5px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .contentText {
@@ -80,4 +80,16 @@
   font-size: 12px;
   margin: 0px 0px 5px 0px;
   font-family: 'IBM Plex Mono';
+}
+
+.footerContent {
+  font-weight: 300;
+  font-family: "Inter";
+  font-size: 13px;
+  margin-bottom: 25px;
+}
+
+.footerContent:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
