--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -18,3 +18,13 @@
     margin-bottom: 40px;
   }
 }
+
+.blogCard {
+  border-radius: 10px;
+  box-shadow: 0px 1px 12px #CCC;
+  padding: 20px;
+}
+
+.blogCard:hover {
+  cursor: pointer;
+}
