--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -93,3 +93,43 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+.button {
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 10px;
+  border: none;
+  -webkit-appearance: none;
+  padding: 0.75rem 3rem;
+  color: #fff;
+  background-color: #222;
+  -webkit-transition: background-color 100ms ease-in-out;
+  -ms-transition: background-color 100ms ease-in-out;
+  transition: background-color 100ms ease-in-out;
+}
+
+
+.button:hover {
+  background-color: #444;
+  -webkit-transition: background-color 100ms ease-in-out;
+  -ms-transition: background-color 100ms ease-in-out;
+  transition: background-color 100ms ease-in-out;
+}
+
+.button:active {
+  background-color: #999;
+  -webkit-transition: background-color 100ms ease-in-out;
+  -ms-transition: background-color 100ms ease-in-out;
+  transition: background-color 100ms ease-in-out;
+}
+
+.buttonText {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+  margin-bottom: 0;
+}
