--- a/styles/Comment.module.css
+++ b/styles/Comment.module.css
@@ -1,5 +1,6 @@
 .commentBubble {
   border-radius: 8px;
+  box-shadow: 0px 1px 12px -5px #CCC;
   border: 1px solid #E6E6E6;
   
   background-color: #FFF;
@@ -19,15 +20,39 @@
 .commentName {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
-  color: #AAA;
+  color: #999;
 }
 
 .commentDate {
   margin-left: 10px;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 10px;
-  color: #CCC;
+  color: #999;
   align-self: flex-end;
+}
+
+.commentReply {
+  display: table;
+  align-items: center;
+  margin: 0px 10px 5px 5px;
+  cursor: pointer;
+
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #444;
+
+  border: 1px solid #FFF;
+  -webkit-transition: border-bottom-color 100ms ease-in-out;
+  -ms-transition: border-bottom-color 100ms ease-in-out;
+  transition: border-bottom-color 100ms ease-in-out;
+}
+
+.commentReply:hover {
+  border-bottom-color: #444;
+  -webkit-transition: border-bottom-color 100ms ease-in-out;
+  -ms-transition: border-bottom-color 100ms ease-in-out;
+  transition: border-bottom-color 100ms ease-in-out;
 }
 
 .commentContent {
