--- a/styles/Comment.module.css
+++ b/styles/Comment.module.css
@@ -34,7 +34,7 @@
 .commentReplyButton {
   display: table;
   align-items: center;
-  margin: 0px 5px 25px 5px;
+  margin: 0px 5px 5px 5px;
   cursor: pointer;
 
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -65,4 +65,21 @@
 .commentError {
   color: #F00;
   margin-bottom: 20px;
+}
+
+.commentOption {
+  margin: 0px 5px 5px 5px;
+  float: right;
+  cursor: pointer;
+  border: 1px solid #FFF;
+  -webkit-transition: border-bottom-color 100ms ease-in-out;
+  -ms-transition: border-bottom-color 100ms ease-in-out;
+  transition: border-bottom-color 100ms ease-in-out;
+}
+
+.commentOption:hover {
+  border-bottom-color: #444;
+  -webkit-transition: border-bottom-color 100ms ease-in-out;
+  -ms-transition: border-bottom-color 100ms ease-in-out;
+  transition: border-bottom-color 100ms ease-in-out;
 }
