--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,21 +53,20 @@ p {
 }
 
 h1 {
-  font-size: 72px;
-  margin-block-start: 0.08em;
-  margin-block-end: 0.08em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+  font-size: 60px !important;
+  font-weight: 800 !important;
+  text-align: center !important;
+  margin-top: 20px !important;
+  margin-bottom: 40px !important;
 }
 
 h2 {
-  font-size: 40px;
-  font-weight: 800;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+  font-size: 40px !important;
+  font-weight: 700 !important;
+  text-align: left !important;
+  margin: 0px !important;
 }
 
 .animated-1 {
