--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,55 +1,9 @@
-.title {
-  font-size: 60px;
-  font-weight: 800;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
-}
-
-.subtitle {
-  font-size: 40px;
-  font-weight: 700;
-  text-align: left;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  margin: 0px;
-}
-
-.h3title {
-  font-size: 20px;
-  font-weight: 300;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  margin: 0px;
-}
-
-.h4title {
-  font-size: 30px;
-  font-weight: 800;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
-}
-
-.h5title {
-  font-size: 30px;
-  font-weight: 800;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
-}
-
-.h6title {
-  font-size: 30px;
-  font-weight: 800;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
+.centered {
+  text-align: center !important;
 }
 
 .headerContentText {
+  text-align: center;
   color: #222;
   font-weight: 500;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -67,7 +21,7 @@
   font-weight: 500;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.6;
-  letter-spacing: -0.04em;
+letter-spacing: -0.04em;
   margin-block-end: 0.0em;
 }
 
@@ -83,6 +37,7 @@
 }
 
 .footerContent {
+  text-align: center;
   font-weight: 300;
   font-family: "Inter";
   font-size: 13px;
