--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 
+    'Helvetica Neue', sans-serif !important;
 }
 
 a {
@@ -44,30 +45,38 @@ a {
   font-size: calc(10px + 2vmin);
 }
 
-.App-link {
-  color: #222222;
-}
-
-p {
-  text-align:center;
-}
 
 h1 {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   font-size: 60px !important;
   font-weight: 800 !important;
-  text-align: center !important;
-  margin-top: 20px !important;
-  margin-bottom: 40px !important;
 }
 
 h2 {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   font-size: 40px !important;
-  font-weight: 700 !important;
-  text-align: left !important;
-  margin: 0px !important;
+  font-weight: 800 !important;
 }
+
+h3 {
+  font-size: 30px !important;
+  font-weight: 800 !important;
+}
+
+h4 {
+  font-size: 25px !important;
+  font-weight: 800 !important;
+}
+
+h5 {
+  font-size: 20px !important;
+  font-weight: 800 !important;
+}
+
+h6 {
+  font-size: 20px !important;
+  font-weight: 300 !important;
+}
+
+
 
 .animated-1 {
     animation-duration: 1s;
