--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,7 +76,16 @@ h6 {
   font-weight: 300 !important;
 }
 
-
+p {
+  text-align: left;
+  color: #222;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.6;
+  letter-spacing: -0.04em;
+  margin-block-end: 0.0em;
+}
 
 .animated-1 {
     animation-duration: 1s;
