images needed margins

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -102,6 +102,8 @@ img {
   object-fit: cover;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 blockquote {
