adding verticle margins to tags

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,7 +28,7 @@
 .tagText {
   float:left;
   padding: 0.4em 1em;
-  margin: 0px 1.2em 0px 0px;
+  margin: 0px 1.2em 1em 0px;
   /* background-color: #BBB; */
   border-radius: 0.5em;
   border: 1px solid #888;
