--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,10 +89,10 @@ p {
   text-align: left;
   color: #222;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400 !important;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.6;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.02em;
   margin-block-end: 0.0em;
 
   margin-bottom: 15px !important;
@@ -126,13 +126,14 @@ pre {
   
   margin-top: 25px !important;
   margin-bottom: 30px !important;
+  margin-left: -0.1rem !important;
 }
 
 code {
   color: #222 !important;
-  padding: .2rem 0.5rem;
+  padding: .2rem 0.0rem;
   font-weight: 100;
-  margin: 0 0.1rem;
+  /* margin: 0 0.1rem; */
   font-size: 90%;
   /* white-space: nowrap; */
   background: #F1F1F1;
