--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,8 +1,8 @@
 .navbarContainer {
-  -webkit-box-shadow: -2px -1px 15px 7px rgba(0,0,0,0.5);
-  -moz-box-shadow: -3px -2px 30px 14px rgba(0,0,0,0.425);
+  -webkit-box-shadow: -2px -1px 15px 7px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: -3px -2px 30px 14px rgba(0, 0, 0, 0.425);
   margin: 0px 0px 5px 0px;
-  box-shadow: 0px 1px 12px #CCCCCC;
+  box-shadow: 0px 1px 12px #cccccc;
 }
 
 .navbar {
@@ -10,6 +10,12 @@
   margin: 0px 6vw 0px 6vw;
   padding: 0;
   overflow: hidden;
+  /* width: 0px; */
+}
+
+.navbarItem::before {
+  content: '';
+  display: none;
 }
 
 .navbarItem {
@@ -29,8 +35,8 @@
   text-align: center;
   text-decoration: none;
   font-weight: 400;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bolder;
   color: #222;
 }
@@ -49,7 +55,7 @@ div.navbarLink {
 }
 
 div.navbarLink:before {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 1px;
@@ -66,8 +72,7 @@ div.navbarLink:hover:before {
   transform: scaleX(1);
 }
 
-
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 480px) {
   .navbar {
     list-style-type: none;
     margin: 0px 4vw 0px 4vw;
