--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,11 +154,8 @@ blockquote {
 pre {
   display: block;
   overflow: auto;
-  /* word-break: normal; */
   white-space: pre-wrap !important;
   border: 1px solid #999;
-  /* page-break-inside: avoid; */
-  overflow: auto;
   color: #222 !important;
   background: #f1f1f1;
   border: 1px solid #e1e1e1;
@@ -175,13 +172,19 @@ code {
   word-break: break-word;
   white-space: break-spaces;
   color: #222 !important;
-  padding: 0.2rem 0rem;
+  padding: 0.2rem 0.3rem;
+  margin: 0rem 0.05rem;
   font-weight: 100;
-  /* margin: 0 0.1rem; */
   font-size: 90%;
   background: #f1f1f1;
-  /* border: 1px solid #E1E1E1; */
+  border: 1px solid #e1e1e1;
   border-radius: 4px;
+}
+
+pre code {
+  padding: 0.2rem 0rem;
+  margin: 0rem 0rem;
+  border: none;
 }
 
 .animated-1 {
