--- a/styles/HomeHeader.module.css
+++ b/styles/HomeHeader.module.css
@@ -1,10 +1,10 @@
 .header {
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   height: 30vw;
   display: flex;
   flex-direction: row;
 
-  box-shadow: 0px 5px 10px #DDD;
+  box-shadow: 0px 5px 10px #ddd;
 }
 
 .greyGradientText {
@@ -13,7 +13,7 @@
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
-  -webkit-text-fill-color: transparent; 
+  -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 }
 
@@ -23,9 +23,9 @@
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
-  -webkit-text-fill-color: transparent; 
+  -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  filter: drop-shadow(1px 1px 5px #DDD);
+  filter: drop-shadow(1px 1px 5px #ddd);
 }
 
 .headerFirstLineText {
@@ -34,7 +34,9 @@
   margin-left: 6vw;
   font-size: 4.5vw;
 
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   letter-spacing: -0.02em;
 }
 
@@ -42,7 +44,9 @@
   line-height: 9.3vw;
   margin-left: 6vw;
   font-weight: 900;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   letter-spacing: -0.02em;
   font-size: 8vw;
 }
