--- a/styles/Comment.module.css
+++ b/styles/Comment.module.css
@@ -1,9 +1,9 @@
 .commentBubble {
   border-radius: 8px;
-  box-shadow: 0px 1px 12px -5px #CCC;
-  border: 1px solid #E6E6E6;
-  
-  background-color: #FFF;
+  box-shadow: 0px 1px 12px -5px #ccc;
+  border: 1px solid #e6e6e6;
+
+  background-color: #fff;
   -webkit-transition: background-color 300ms ease-in-out;
   -ms-transition: background-color 300ms ease-in-out;
   transition: background-color 300ms ease-in-out;
@@ -18,14 +18,18 @@
 }
 
 .commentName {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 16px;
   color: #999;
 }
 
 .commentDate {
   margin-left: 10px;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 10px;
   color: #999;
   align-self: flex-end;
@@ -37,12 +41,14 @@
   margin: 0px 5px 5px 5px;
   cursor: pointer;
 
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: #444;
 
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
   -webkit-transition: border-bottom-color 100ms ease-in-out;
   -ms-transition: border-bottom-color 100ms ease-in-out;
   transition: border-bottom-color 100ms ease-in-out;
@@ -56,14 +62,16 @@
 }
 
 .commentContent {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #222;
 }
 
 .commentError {
-  color: #F00;
+  color: #f00;
   margin-bottom: 20px;
 }
 
@@ -71,7 +79,7 @@
   margin: 0px 5px 5px 5px;
   float: right;
   cursor: pointer;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
   -webkit-transition: border-bottom-color 100ms ease-in-out;
   -ms-transition: border-bottom-color 100ms ease-in-out;
   transition: border-bottom-color 100ms ease-in-out;
@@ -87,5 +95,5 @@
 .commentOptionNoHover {
   margin: 0px 5px 5px 5px;
   float: right;
-  cursor:default;
+  cursor: default;
 }
