--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,16 +6,18 @@
   text-align: center;
   color: #222;
   font-weight: 500;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   line-height: 1.6;
   letter-spacing: -0.04em;
-  margin-block-end: 0.0em;
+  margin-block-end: 0em;
   margin: 15px 5px;
   font-size: 18px;
 }
 
 .codeText {
-  float:left;
+  float: left;
   padding-right: 20px;
   text-align: left;
   color: #888;
@@ -26,7 +28,7 @@
 }
 
 .tagText {
-  float:left;
+  float: left;
   padding: 0.4em 1em;
   margin: 0px 1.2em 1em 0px;
   /* background-color: #BBB; */
@@ -40,7 +42,7 @@
 .footerContent {
   text-align: center;
   font-weight: 300;
-  font-family: "Inter";
+  font-family: 'Inter';
   font-size: 13px;
   margin-bottom: 25px;
 }
@@ -64,7 +66,6 @@
   transition: background-color 100ms ease-in-out;
 }
 
-
 .button:hover {
   background-color: #444;
   -webkit-transition: background-color 100ms ease-in-out;
@@ -83,7 +84,9 @@
   display: inline-block;
   text-decoration: none;
   text-align: center;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #fff;
@@ -103,7 +106,7 @@
   fill: #666;
   -webkit-transition: fill 100ms ease-in-out;
   -ms-transition: fill 100ms ease-in-out;
-  transition: fill 100ms ease-in-out; 
+  transition: fill 100ms ease-in-out;
   cursor: pointer;
 }
 
@@ -111,7 +114,7 @@
   fill: #222;
   -webkit-transition: fill 100ms ease-in-out;
   -ms-transition: fill 100ms ease-in-out;
-  transition: fill 100ms ease-in-out; 
+  transition: fill 100ms ease-in-out;
   cursor: pointer;
 }
 
@@ -121,6 +124,6 @@
   /* margin-right: 3px; */
   width: 10px;
   text-align: center;
-  cursor:default;
+  cursor: default;
   font-size: 14px;
 }
