--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif !important;
+    sans-serif;
 }
 
 a {
@@ -50,42 +50,42 @@ a {
 }
 
 h1 {
-  font-size: 60px !important;
-  font-weight: 800 !important;
+  font-size: 60px;
+  font-weight: 800;
 }
 
 h2 {
-  font-size: 40px !important;
-  font-weight: 800 !important;
+  font-size: 40px;
+  font-weight: 800;
 }
 
 h3 {
-  font-size: 30px !important;
-  font-weight: 800 !important;
+  font-size: 30px;
+  font-weight: 800;
 
-  margin-top: 45px !important;
-  margin-bottom: 22px !important;
+  margin-top: 45px;
+  margin-bottom: 22px;
 }
 
 h4 {
-  font-size: 25px !important;
-  font-weight: 800 !important;
+  font-size: 25px;
+  font-weight: 800;
 
-  margin-top: 50px !important;
-  margin-bottom: 30px !important;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 h5 {
-  font-size: 20px !important;
-  font-weight: 800 !important;
+  font-size: 20px;
+  font-weight: 800;
 
-  margin-top: 25px !important;
-  margin-bottom: 25px !important;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 h6 {
-  font-size: 20px !important;
-  font-weight: 300 !important;
+  font-size: 20px;
+  font-weight: 300;
 }
 
 ul {
@@ -122,7 +122,7 @@ p {
   word-break: break-word;
   color: #222;
   font-size: 16px;
-  font-weight: 400 !important;
+  font-weight: 400;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -130,7 +130,7 @@ p {
   letter-spacing: -0.02em;
   margin-block-end: 0em;
 
-  margin-bottom: 15px !important;
+  margin-bottom: 15px;
 }
 
 img {
@@ -144,9 +144,9 @@ img {
 }
 
 blockquote {
-  margin-top: 10px !important;
-  margin-bottom: 10px !important;
-  margin-left: 3vw !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 3vw;
   padding-left: 15px;
   border-left: 3px solid #ccc;
 }
@@ -154,24 +154,24 @@ blockquote {
 pre {
   display: block;
   overflow: auto;
-  white-space: pre-wrap !important;
+  white-space: pre-wrap;
   border: 1px solid #999;
-  color: #222 !important;
+  color: #222;
   background: #f1f1f1;
   border: 1px solid #e1e1e1;
   border-radius: 4px;
   font-size: 90%;
   padding: 0.2rem 0.5rem;
 
-  margin-top: 25px !important;
-  margin-bottom: 30px !important;
-  margin-left: -0.1rem !important;
+  margin-top: 25px;
+  margin-bottom: 30px;
+  margin-left: -0.1rem;
 }
 
 code {
   word-break: break-word;
   white-space: break-spaces;
-  color: #222 !important;
+  color: #222;
   padding: 0.2rem 0.3rem;
   margin: 0rem 0.05rem;
   font-weight: 100;
