--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,7 @@ h1 {
 
 h2 {
   font-size: 40px;
+  line-height: 1.25;
   font-weight: 800;
 }
 
@@ -63,6 +64,7 @@ h3 {
   font-size: 30px;
   font-weight: 800;
 
+  line-height: 1.25;
   margin-top: 45px;
   margin-bottom: 22px;
 }
@@ -131,16 +133,6 @@ p {
   margin-block-end: 0em;
 
   margin-bottom: 15px;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  object-fit: cover;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;
-  margin-bottom: 40px;
 }
 
 blockquote {
